[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-insight"
version = "0.1.0"
description = "Performance insight tools for reinforcement learning frameworks."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "rl-insight contributors" },
]
dependencies = [
  "numpy<2.0.0",
  "pandas",
  "plotly",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/verl-project/rl-insight"
Source = "https://github.com/verl-project/rl-insight"

[tool.setuptools.packages.find]
where = ["."]
include = ["cluster_analysis"]

